# planes

./: .gitignore  Bugs.txt  CMakeLists.txt  HOWTOCompilewithCMake.txt  Imbunatatiri.txt  LICENSE  Planes.pro  PlanesGraphicsScene.sh  README.md  jni.bat  jni.sh  readme_appimage.txt  todo.txt
PlanesGraphicsScene/: CMakeLists.txt  PlanesGraphicsScene.pro  animatedtextitem.cpp  animatedtextitem.h  boardrectangle.cpp  boardrectangle.h  computerboard.cpp  computerboard.h  customgraphicsscene.cpp  customhorizlayout.cpp  gameboard.cpp  gameboard.h  gamestatsframe.cpp  gamestatsframe.h  genericboard.cpp  genericboard.h  gridsquare.cpp  gridsquare.h  leftpane.cpp  leftpane.h  main.cpp  planesgsview.cpp  planesgsview.h  planesgswindow.cpp  planesgswindow.h  playareagridsquare.cpp  playareagridsquare.h  playerboard.cpp  playerboard.h  resources.qrc  rightpane.cpp  rightpane.h  scoreframe.cpp  scoreframe.h
PlanesQML/: BoardEditor.qml  BoardEditorControls.qml  Button.qml  ButtonPaintFunctions.js  CMakeLists.txt  ComputerBoard.qml  DoneEditing.qml  GameStatistics.qml  GenericBoard.qml  GridSquare.qml  HelpPageModel.qml  LeftPane.qml  MovePlaneDownwards.qml  MovePlaneLeft.qml  MovePlaneRight.qml  MovePlaneUpwards.qml  PlanesQML.pro  PlayAgain.qml  PlayerBoard.qml  RightPane.qml  RotatePlane.qml  SelectPlane.qml  main.cpp  main.qml  planegameqml.cpp  planegameqml.h  planegridqml.cpp  planegridqml.h  qml.qrc
PlanesWidget/: CMakeLists.txt  EditControl.ui  PlanesWidget.pro  baserenderarea.cpp  baserenderarea.h  buttons.cpp  buttons.h  choicedebugwidget.cpp  choicedebugwidget.h  debugrenderarea.cpp  debugrenderarea.h  editorwindow.cpp  editorwindow.h  editplanescontrolwidget.cpp  editplanescontrolwidget.h  gamerenderarea.cpp  gamerenderarea.h  gamestatswidget.cpp  gamestatswidget.h  main.cpp  planeswview.cpp  planeswview.h  planeswwindow.cpp  planeswwindow.h  revertcomputerlogic.cpp
c_plus_plus/: CMakeLists.txt  PlanesQML.sh  planes.db  planes.metainfo.xml  runTests.sh
c_plus_plus/PlanesGraphicsScene/: CMakeLists.txt  accountwidget.cpp  accountwidget.h  clickablelabel.cpp  clickablelabel.h  communicationtools.cpp  communicationtools.h  computerboard.h  creategamewidget.cpp  creategamewidget.h  customgraphicsscene.cpp  customgraphicsscene.h  customgraphicsview.cpp  customgraphicsview.h  customhorizlayout.cpp  customhorizlayout.h  databaseservice.cpp  databaseservice.h  gamedata.h  gamedifficultyoptions.cpp  gamedifficultyoptions.h  gameendwidget.cpp  gameendwidget.h  gameinfo.h  gamestatsframe.h  gamestatuswidget.cpp  gamestatuswidget.h  gamewidget.cpp  gamewidget.h  genericboard.cpp  leftpane.cpp  logindata.h  loginregisterform.cpp  loginregisterform.h  loginregisterstackedwidget.cpp  loginregisterstackedwidget.h  main.cpp  mainaccountwidget.cpp  mainaccountwidget.h  multiplayerround.cpp  (+22 more)
c_plus_plus/PlanesQML/: BoardEditorControls.qml  CMakeLists.txt  DoneEditing.qml  GameStatistics.qml  GenericBoard.qml  HelpPageModel.qml  LeftOptionsPane.qml  LeftPane.qml  MovePlaneDownwards.qml  MovePlaneLeft.qml  MovePlaneRight.qml  MovePlaneUpwards.qml  PlayAgain.qml  RightOptionsPane.qml  RightPane.qml  RotatePlane.qml  SelectPlane.qml  main.cpp  main.qml  planegameqml.cpp  planegameqml.h  planegridqml.cpp  planegridqml.h  qml.qrc
c_plus_plus/PlanesServerTestGUI/: CMakeLists.txt  PlanesServerTestGUI.kdev4  main.cpp  mainwindow.cpp  mainwindow.h
c_plus_plus/PlanesWidget/: CMakeLists.txt  EditControl.ui  GameForm.ui  baserenderarea.cpp  baserenderarea.h  debugrenderarea.cpp  debugrenderarea.h  editorwindow.h  gamerenderarea.cpp  planeswview.cpp  planeswwindow.h  revertcomputerlogic.cpp
c_plus_plus/bcrypt/: BCrypt.hpp  CMakeLists.txt  bcrypt.c  crypt_blowfish.c  crypt_gensalt.c  wrapper.c
c_plus_plus/common/: CMakeLists.txt  abstractplaneround.cpp  abstractplaneround.h  com_planes_javafx_PlaneRoundJavaFx.cpp  com_planes_javafx_PlaneRoundJavaFx.h  computerlogic.cpp  computerlogic.h  gamestatistics.cpp  gamestatistics.h  guesspoint.cpp  guesspoint.h  headdata.h  plane.h  planegrid.cpp  planegrid.h  planeiterators.cpp  planeorientationdata.cpp  planeround.cpp  planeround.h  vectoriterator.h
c_plus_plus/doc/: about.html  index.html
c_plus_plus/multiround/: CMakeLists.txt  communicationtools.cpp  communicationtools.h  gameinfo.h  multiplayerround.cpp  multiplayerround.h
c_plus_plus/singleround/: CMakeLists.txt  abstractplaneround.cpp  abstractplaneround.h  computerlogic.cpp  computerlogic.h  coordinate2d.cpp  coordinate2d.h  gamestatistics.cpp  gamestatistics.h  guesspoint.h  headdata.cpp  headdata.h  plane.cpp  plane.h  planegrid.cpp  planegrid.h  planeintersectingpointiterator.cpp  planeintersectingpointiterator.h  planeiterators.cpp  planeiterators.h  planeorientationdata.cpp  planeorientationdata.h  planepointiterator.cpp  planepointiterator.h  planeround.cpp  planeround.h  planeroundoptions.cpp  planeroundoptions.h  playerguessreaction.h  pointinfluenceiterator.cpp  pointinfluenceiterator.h  vectoriterator.h
c_plus_plus/snap/: planes.metainfo.xml  snapcraft.yaml
c_plus_plus/stomp/: CMakeLists.txt  stompclient.cpp  stompclient.h  stompframe.cpp  stompframe.h  stompframecreator.cpp  stompframecreator.h  stompframeparser.cpp  stompframeparser.h
c_plus_plus/tests/: CMakeLists.txt  cancelroundcommobjtest.cpp  cancelroundcommobjtest.h  connecttogamecommobjtest.cpp  connecttogamecommobjtest.h  creategamecommobjtest.cpp  creategamecommobjtest.h  logincommobjtest.cpp  main.cpp  norobotcommobjtest.cpp  (+6 more)
common/: CMakeLists.txt  com_planes_javafx_PlaneRoundJavaFx.cpp  com_planes_javafx_PlaneRoundJavaFx.h  common.pro  computerlogic.cpp  computerlogic.h  coordinate2d.cpp  coordinate2d.h  gamestatistics.cpp  gamestatistics.h  gridcoordinate.cpp  gridcoordinate.h  guesspoint.cpp  guesspoint.h  headdata.cpp  listiterator.h  plane.cpp  plane.h  planegame.cpp  planegame.h  planegrid.cpp  planegrid.h  planeiterators.cpp  planeiterators.h  planeorientationdata.cpp  planeround.cpp  planeround.h  planeroundjavafx.cpp  planeroundjavafx.h  planesmodel.cpp  planesmodel.h  revertcomputerlogic.h  vectoriterator.h
(+1116 files in other folders)
