cmake_minimum_required (VERSION 2.6)
project (Planes)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTORCC ON)

#if (UNIX)
find_package(Qt5 COMPONENTS Core Widgets Quick)
#endif (UNIX)

if (UNIX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 ")
set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
endif (UNIX)

#if (WIN32)
#find_package(Qt5Widgets)
#endif (WIN32)

#message("Source dir: " ${CMAKE_CURRENT_SOURCE_DIR})
#message(${Qt5Widgets_LIBRARIES})
#message(${Qt5Widgets_INCLUDE_DIRS})
#message("Qt dir: " ${QTDIR})

add_subdirectory(PlanesWidget)
add_subdirectory(PlanesGraphicsScene)
add_subdirectory(PlanesQML)
add_subdirectory(common)


if (NOT UNIX)
install(FILES $ENV{QT_DIR}/bin/Qt5Core.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Cored.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Gui.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Guid.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Widgets.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Widgetsd.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Qml.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Qmld.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Network.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Networkd.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5QuickControls2.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5QuickControls2d.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Quick.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5Quickd.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5QuickTemplates2.dll DESTINATION bin)
install(FILES $ENV{QT_DIR}/bin/Qt5QuickTemplates2d.dll DESTINATION bin)
install(DIRECTORY $ENV{QT_DIR}/qml/QtQuick DESTINATION qml)
install(DIRECTORY $ENV{QT_DIR}/qml/QtQuick.2 DESTINATION qml)
install(DIRECTORY $ENV{QT_DIR}/qml/QtQml DESTINATION qml)
install(DIRECTORY $ENV{QT_DIR}/plugins/platforms DESTINATION platforms)
endif (NOT UNIX)